--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container chatbot">
   <h1>Chat with us</h1>
   <div id="questions">
-    <%= render @questions %>
+    <%= render @question %>
   </div>
 
   <%= render "form", question: @question %>
